@@ -9,6 +9,18 @@
 #-asdf
 (require :asdf #+clisp '(#P"/usr/share/common-lisp/source/cl-asdf/asdf.lisp"))
 
+;; Hot-upgrade ASDF.
+;;
+;; It's useful if user has a local version of ASDF.
+;;
+;; Currently only available in ASDF2.
+#+asdf2
+(asdf:oos 'asdf:load-op :asdf)
+
+;; Cleanups after hot-upgrade.
+#+asdf2
+(asdf:clear-configuration)
+
 (asdf:oos 'asdf:load-op :clfswm)
 
 (clfswm:main)
